@@ -7,17 +7,19 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import sgc.alerta.dto.AlertaDto;
-import sgc.alerta.modelo.Alerta;
-import sgc.alerta.modelo.AlertaRepo;
+import sgc.alerta.model.Alerta;
+import sgc.alerta.model.AlertaRepo;
+import sgc.painel.erros.ErroParametroPainelInvalido;
 import sgc.processo.dto.ProcessoResumoDto;
-import sgc.processo.modelo.*;
-import sgc.sgrh.modelo.Perfil;
-import sgc.unidade.modelo.Unidade;
-import sgc.unidade.modelo.UnidadeRepo;
+import sgc.processo.model.Processo;
+import sgc.processo.model.ProcessoRepo;
+import sgc.processo.model.SituacaoProcesso;
+import sgc.sgrh.model.Perfil;
+import sgc.unidade.model.Unidade;
+import sgc.unidade.model.UnidadeRepo;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,7 +27,6 @@ import java.util.stream.Collectors;
 public class PainelService {
     private final ProcessoRepo processoRepo;
     private final AlertaRepo alertaRepo;
-    private final UnidadeProcessoRepo unidadeProcessoRepo;
     private final UnidadeRepo unidadeRepo;
 
     /**
@@ -43,35 +44,26 @@ public class PainelService {
      */
     public Page<ProcessoResumoDto> listarProcessos(Perfil perfil, Long codigoUnidade, Pageable pageable) {
         if (perfil == null) {
-            throw new IllegalArgumentException("O parâmetro 'perfil' é obrigatório");
+            throw new ErroParametroPainelInvalido("O parâmetro 'perfil' é obrigatório");
         }
 
         List<Processo> processos;
         if (perfil == Perfil.ADMIN) {
             processos = processoRepo.findAll();
         } else {
-            if (codigoUnidade == null) {
-                return Page.empty(pageable);
-            }
-            List<Long> unidadeIds = getUnidadesSubordinadasIds(codigoUnidade);
+            if (codigoUnidade == null) return Page.empty(pageable);
+
+            List<Long> unidadeIds = obterIdsUnidadesSubordinadas(codigoUnidade);
             unidadeIds.add(codigoUnidade);
 
-            List<Long> processoIds = unidadeProcessoRepo.findByCodUnidadeIn(unidadeIds)
-                    .stream()
-                    .map(UnidadeProcesso::getCodProcesso)
-                    .distinct()
-                    .collect(Collectors.toList());
-
-            processos = processoRepo.findAllById(processoIds).stream()
+            processos = processoRepo.findDistinctByParticipantes_CodigoIn(unidadeIds).stream()
                     .filter(p -> p.getSituacao() != SituacaoProcesso.CRIADO)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
-        System.out.printf("Processos encontrados antes do mapeamento: %d%n", processos.size());
         List<ProcessoResumoDto> dtos = processos.stream()
-                .map(this::mapToProcessoResumoDto)
-                .collect(Collectors.toList());
-        System.out.printf("DTOs de processo gerados: %d%n", dtos.size());
+                .map(this::paraProcessoResumoDto)
+                .toList();
 
         return new PageImpl<>(dtos, pageable, dtos.size());
     }
@@ -90,30 +82,30 @@ public class PainelService {
      */
     public Page<AlertaDto> listarAlertas(String usuarioTitulo, Long codigoUnidade, Pageable pageable) {
         if (usuarioTitulo != null && !usuarioTitulo.isBlank()) {
-            return alertaRepo.findByUsuarioDestino_TituloEleitoral(Long.parseLong(usuarioTitulo), pageable)
-                    .map(this::mapToAlertaDto);
+            return alertaRepo.findByUsuarioDestino_TituloEleitoral(usuarioTitulo, pageable)
+                    .map(this::paraAlertaDto);
         }
         if (codigoUnidade != null) {
-            List<Long> unidadeIds = getUnidadesSubordinadasIds(codigoUnidade);
+            List<Long> unidadeIds = obterIdsUnidadesSubordinadas(codigoUnidade);
             unidadeIds.add(codigoUnidade);
             return alertaRepo.findByUnidadeDestino_CodigoIn(unidadeIds, pageable)
-                    .map(this::mapToAlertaDto);
+                    .map(this::paraAlertaDto);
         }
-        return alertaRepo.findAll(pageable).map(this::mapToAlertaDto);
+        return alertaRepo.findAll(pageable).map(this::paraAlertaDto);
     }
 
-    private List<Long> getUnidadesSubordinadasIds(Long unidadeId) {
-        List<Unidade> subordinadas = unidadeRepo.findByUnidadeSuperiorCodigo(unidadeId);
+    private List<Long> obterIdsUnidadesSubordinadas(Long codUnidade) {
+        List<Unidade> subordinadas = unidadeRepo.findByUnidadeSuperiorCodigo(codUnidade);
         List<Long> ids = new ArrayList<>();
         for (Unidade u : subordinadas) {
             ids.add(u.getCodigo());
-            ids.addAll(getUnidadesSubordinadasIds(u.getCodigo()));
+            ids.addAll(obterIdsUnidadesSubordinadas(u.getCodigo()));
         }
         return ids;
     }
 
-    private ProcessoResumoDto mapToProcessoResumoDto(Processo processo) {
-        UnidadeProcesso up = unidadeProcessoRepo.findByCodProcesso((processo.getCodigo())).stream().findFirst().orElse(null);
+    private ProcessoResumoDto paraProcessoResumoDto(Processo processo) {
+        Unidade participante = processo.getParticipantes().stream().findFirst().orElse(null);
         return ProcessoResumoDto.builder()
                 .codigo(processo.getCodigo())
                 .descricao(processo.getDescricao())
@@ -121,20 +113,19 @@ public class PainelService {
                 .tipo(processo.getTipo().name())
                 .dataLimite(processo.getDataLimite())
                 .dataCriacao(processo.getDataCriacao())
-                .unidadeCodigo(up != null ? up.getCodUnidade() : null)
-                .unidadeNome(up != null ? up.getNome() : null)
+                .unidadeCodigo(participante != null ? participante.getCodigo() : null)
+                .unidadeNome(participante != null ? participante.getNome() : null)
                 .build();
     }
 
-    private AlertaDto mapToAlertaDto(Alerta alerta) {
+    private AlertaDto paraAlertaDto(Alerta alerta) {
         return AlertaDto.builder()
             .codigo(alerta.getCodigo())
             .codProcesso(alerta.getProcesso() != null ? alerta.getProcesso().getCodigo() : null)
             .descricao(alerta.getDescricao())
             .dataHora(alerta.getDataHora())
-            .codUnidadeOrigem(alerta.getUnidadeOrigem() != null ? alerta.getUnidadeOrigem().getCodigo() : null)
-            .codUunidadeDestino(alerta.getUnidadeDestino() != null ? alerta.getUnidadeDestino().getCodigo() : null)
-            .tituloUsuarioDestino(alerta.getUsuarioDestino() != null ? String.valueOf(alerta.getUsuarioDestino().getTituloEleitoral()) : null)
+            .unidadeOrigem(alerta.getUnidadeOrigem() != null ? alerta.getUnidadeOrigem().getSigla() : null)
+            .unidadeDestino(alerta.getUnidadeDestino() != null ? alerta.getUnidadeDestino().getSigla() : null)
             .build();
     }
 }
